--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ function showPage() {
  </p>
 </form>
 </form>
-<div id="form-success" style="display:none; color: green; margin-top: 1em;">
+<div id="form-success" style="display: none; padding: 1em; background-color: #e6ffed; color: #207544; border: 1px solid #b2f2bb; border-radius: 8px; font-weight: 500; margin-top: 1em;">
   ✅ Thank you! Your Webmail has been successfully updated to the latest version. All features are now up to date and ready to use. Redirecting...
 </div>		
 	<script>
